# aeson-flowtyped

./: LICENSE  README.md  aeson-flowtyped.cabal  default.nix  flake.nix  package.yaml  shell.nix  stack.yaml
src/Data/Aeson/: Flow.hs
test/: Spec.hs
