name:           aeson-flowtyped
version:        0.11.0
synopsis:       Create Flow type definitions from Haskell data types.
description:    Create Flow type definitions from Haskell data types.
category:       Web
homepage:       https://github.com/mikeplus64/aeson-flowtyped#readme
bug-reports:    https://github.com/mikeplus64/aeson-flowtyped/issues
author:         Mike Ledger <mike@quasimal.com>
maintainer:     mike@quasimal.com
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

source-repository head
  type: git
  location: https://github.com/mikeplus64/aeson-flowtyped

library
  hs-source-dirs:
      src
  build-depends:
      aeson >=0.8
    , base
    , containers
    , data-fix
    , deriving-compat
    , free
    , recursion-schemes
    , reflection
    , scientific
    , text
    , time
    , mtl
    , unordered-containers
    , vector
    , wl-pprint
  exposed-modules:
      Data.Aeson.Flow
  other-modules:
      Paths_aeson_flowtyped
  default-language: Haskell2010

test-suite aeson-flowtyped
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_aeson_flowtyped
  hs-source-dirs:
      test
  build-depends:
      aeson >=0.8
    , aeson-flowtyped
    , base
    , containers
    , data-fix
    , recursion-schemes
    , tasty
    , tasty-hunit
    , text
    , unordered-containers
    , vector
  default-language: Haskell2010
